--- a/views/template.pug
+++ b/views/template.pug
@@ -1,12 +1,24 @@
-html
-head 
-    if title 
-        title=title 
+doctype html 
 
-body 
-    header 
-        h1 My pug templated
-    main
-        block content
-    footer 
-        i nothing to see here 
+html 
+    head 
+        meta(charset="utf-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        
+        if title 
+            title= title
+        else 
+            title= "template"
+
+        link(rel="stylesheet", href="style.css")
+        script(src="client.js" defer)
+    body 
+        header 
+            nav
+
+            
+        main 
+            block content 
+        footer 
+            h2
+                i nothing to see here
