Templating for create and login, changes to CRUD API requests to allow redirects for this client view

--- a/views/template.pug
+++ b/views/template.pug
@@ -15,6 +15,9 @@ html
     body 
         header 
             nav
+                a(href="/") HOME
+                a(href="/login") LOGIN
+                a(href="/create") CREATE GUITAR 
 
             
         main 
