--- a/views/template.pug
+++ b/views/template.pug
@@ -14,6 +14,7 @@ html
         script(src="client.js" defer)
     body 
         header 
+            h1 Guitar Page
             nav
                 a(href="/") HOME
                 a(href="/login") LOGIN
