17/1-24 : Upload works, mws are on the way

--- a/views/template.pug
+++ b/views/template.pug
@@ -17,8 +17,13 @@ html
             h1 Guitar Page
             nav
                 a(href="/") HOME
-                a(href="/login") LOGIN
-                a(href="/create") CREATE GUITAR 
+                if user
+                    a(href="/logout") LOGOUT
+                    a(href="/create") CREATE GUITAR
+                    a(href="/fu")  FILE UPLOAD 
+                else
+                    a(href="/login") LOGIN
+                    
 
             
         main 
