--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ nav{
     gap:2rem;
 }
 
-.formContainer{
+.formContainer, .guitarContainer{
     width:60%;
     margin:auto;
     padding:2%;
@@ -28,4 +28,28 @@ input{
     width:100%;
     padding:1%;
     font-size:1.3rem;
+}
+img{
+    width:100%;
+}
+/* .guitarContainer img{
+    margin-right: 20px;
+    width:100px;
+    display:block;
+} */
+
+.imgContainer{
+    display:flex;
+    gap:20px;
+
+}
+.imgContainer div{
+    aspect-ratio: 1/1;
+    width:140px;
+    overflow:hidden;
+}
+.imgContainer img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
